crates/pina_macros/tests/ui/fail/accounts_remaining_not_last.stderr
error: `#[pina(remaining)]` field must be the last field
 --> tests/ui/fail/accounts_remaining_not_last.rs:7:6
  |
7 |     pub rest: &'a [AccountView],
  |         ^^^^
